--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- commit: Update gameRound function to include computerPlay function.    -->
+<!-- commit: delete game function.    -->
 
 <!DOCTYPE html>
 <html lang = 'en'>
@@ -101,45 +101,23 @@
                 }
                 else
                 {
-                    if(computerScore == 2 && userScore == 1)
+                    if(computerScore == 2 && playerScore == 1)
                     {
                         roundOutcome.message = "You lose! Rock beats scissors!";
                         roundOutcome.compScore += 1;
                     }
-                    else if (computerScore == 1 && userScore == 0)
+                    else if (computerScore == 1 && playerScore == 0)
                     {
                         roundOutcome.message = "You lose! Scissors beat paper!";
                         roundOutcome.compScore += 1;
                     }
                 }
-                return outcome;
+                return roundOutcome;
             }
             // create game function which calls round function 5 times:
-            function game()
-            {
-                let playerWins = 0;
-                let computerWins = 0;
-                let total_rounds = 0;
-                let outcome = 
-                {
-                    tie: false,
-                    pScore: 0,
-                    cScore: 0,
-                    message: "none"
-                }
-
-                for(let i = 0; i < 5; i++)
-                {
-                    outcome = gameRound(playerSelection, computerSelection);
-                    total_rounds += 1;
-                    console.log(outcome.message);
-                    playerWins += outcome.pScore;
-                    computerWins += outcome.cScore;
-                }
-                console.log(outcome);
-                return winner;
-
-            }
+            var outcome = gameRound();
+            console.log(outcome);
+            
         </script>
     </body>
 </html>
