--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!-- commit: Update comments. Beautify.     -->
+<!-- Rock, paper, scissors game made by Rose Pineau. Initial commit 7/3/2022. See README.md for further info.-->
 
+<!-- commit: Add author header comment. Update other comments.     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -9,10 +10,10 @@
 
     <body>
         <script>
-            // create gameRound function which collects player and computer scores and compares them, then returns an object:
+            // This  gameRound function collects player and computer scores and compares them, then returns an object:
             function gameRound()
             {
-                // prompt user for choice in rock, paper, or scissors. store choice in "userPlay"
+                // Prompts user for choice in rock, paper, or scissors. Stores choice in 'userPlay' & assigns score via 'playerScore'.
                 let playerScore = -1;
                 do
                 {
@@ -20,23 +21,23 @@
 
                     if(userPlay == "rock" || userPlay == "ROCK" || userPlay == "r" || userPlay == "R" || userPlay == "Rock")
                     {
-                        playerScore += 3; // rock = score of 2
+                        playerScore += 3; // Rock = score of 2
                         console.log("You chose: rock");
                         break;
                     }
                     else if(userPlay == "paper" || userPlay == "PAPER" || userPlay == "p" || userPlay == "P" || userPlay == "Paper")
                     {
-                        playerScore += 1; // paper = score of 0
+                        playerScore += 1; // Paper = score of 0
                         console.log("You chose: paper");
                         break;
                     }
                     else if (userPlay == "scissors" || userPlay == "SCISSORS" || userPlay == "s" || userPlay == "S" || userPlay == "Scissors")
                     {
-                        playerScore += 2; // scissors = score of 1
+                        playerScore += 2; // Scissors = score of 1
                         console.log("You chose: scissors");
                         break;
                     }
-                    else
+                    else // If user fails to enter correct input:
                     {
                         console.log("Please choose a valid option!");
                         playerScore += 0;
@@ -44,7 +45,7 @@
                 }
                 while (playerScore = -1);
 
-                // generate random choice of rock/paper/scissors for computer. store in "score"
+                // This function generates random choice of rock/paper/scissors for computer and returns a score:
                 function computerPlay()
                 {
                     function getRandomNum(max)
@@ -54,19 +55,19 @@
                     let num = getRandomNum(4);
 
                     let score = 0;
-                    if(num == "1") // rock
+                    if(num == "1") // Rock
                     {
                         score += 2;
                         console.log("The computer chose: rock");
                     }
-                    else if(num == "2") // scissors
+                    else if(num == "2") // Scissors
                     {
                         score += 1;
                         console.log("The computer chose: scissors");
                     }
                     else
                     {
-                        score += 0; // paper
+                        score += 0; // Paper
                         console.log("The computer chose: paper");
                     }
                 return score;
@@ -81,18 +82,18 @@
                     message: "none"
                 }
 
-                // compare player score w/ computer score for round.
+                // Compares player score w/ computer score for round:
                 if(playerScore == computerScore)
                 {
                     roundOutcome.message = "You tied!";
                     roundOutcome.tie = true;
                 }
-                else if(playerScore == 0 && computerScore == 2) // if user chooses paper && computer chooses rock
+                else if(playerScore == 0 && computerScore == 2) // If user chooses paper & computer chooses rock.
                 {
                     roundOutcome.message = "You win! Paper beats rock!";
                     roundOutcome.playScore += 1;
                 }
-                else if(computerScore == 0 && playerScore == 2) // if computer chooses paper && user chooses rock
+                else if(computerScore == 0 && playerScore == 2) // If computer chooses paper & user chooses rock.
                 {
                     roundOutcome.message = "You lose! Paper beats rock!";
                     roundOutcome.compScore += 1;
@@ -123,16 +124,16 @@
                         roundOutcome.compScore += 1;
                     }
                 }
-                return roundOutcome; // return object which includes tie boolean, scores, and message.
+                return roundOutcome; // Return object which includes tie boolean, scores, and message.
             }
 
-            // create for loop to loop through 5 game rounds, updating outcome object w/ results:
+            // Creates for loop to loop through 5 game rounds, updating outcome object w/ results:
             let pScore = 0;
             let cScore = 0;
 
             for(let i = 0; i < 5; i++)
             {
-                var outcome = gameRound(); // create outcome object to store data from gameRound().
+                var outcome = gameRound(); // Creates outcome object to store data from gameRound().
                 if(outcome.tie == false)
                 {
                     pScore += outcome.playScore;
@@ -145,7 +146,7 @@
                 }
             }
             
-            // tally scores and choose winner:
+            // Tallies scores and chooses winner:
                 if(cScore == pScore)
                 {
                     console.log("You tied! Computer won ", cScore +  " times. You won ", pScore + " times!");
