--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<!-- Rock, paper, scissors game made by Rose Pineau. Initial commit 7/3/2022. See README.md for further info.-->
+<!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Fix variable outcome to outcomeOfRound.     -->
+<!-- commit: Add stylesheet.css, add bg image, begin styling     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
         <meta charset = "UTF-8">
         <title> Rock Paper Scissors</title>
+        <link rel = "stylesheet" href = "stylesheet.css">
     </head>
 
     <body>
+        <header> ROCK PAPER SCISSORS </header>
+            <div class = "instructions">
+                It's a lovely evening for some good 'ol R.P.S. <br>
+                Play your best against the computer!
+            </div>
+        <div class = "button-box">
+            <div class = "button"> Rock </div>
+            <div class= "button"> Paper </div>
+            <div class= "button"> Scissors </div>
+        </div>
+        
         <script>
             // This  playRound function collects player and computer scores and compares them, then returns an object:
             function playRound()
@@ -17,7 +29,7 @@
                 let playerScore = -1;
                 do
                 {
-                    let userPlay = String(prompt("Rock, paper, or scissors?"));
+                    //let userPlay = String(prompt("Rock, paper, or scissors?"));
 
                     if(userPlay == "rock" || userPlay == "ROCK" || userPlay == "r" || userPlay == "R" || userPlay == "Rock")
                     {
