Add font import/fonts. Style header/instructions.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Add stylesheet.css, add bg image, begin styling     -->
+<!-- commit: Add font import/fonts     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -10,11 +10,12 @@
     </head>
 
     <body>
-        <header> ROCK PAPER SCISSORS </header>
+        <header> ROCK PAPER SCISSORS <br>
             <div class = "instructions">
                 It's a lovely evening for some good 'ol R.P.S. <br>
                 Play your best against the computer!
             </div>
+        </header>
         <div class = "button-box">
             <div class = "button"> Rock </div>
             <div class= "button"> Paper </div>
