Add selection gifs w/ file path. Style selections.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
             </div>
         </header>
         <div class = "button-box">
-            <div class = "btn"> Rock </div>
-            <div class= "btn"> Paper </div>
-            <div class= "btn"> Scissors </div>
+            <img class = "rock-gif" src = "img/rock.gif">
+            <img class = "paper-gif" src = "img/paper.gif">
+            <img class = "scissors-gif" src = "img/scissors.gif">
+        </div>
+        <div class = "button-box">
+            <button class = "rock-button"> Rock </button>
+            <button class = "paper-button"> Paper </button>
+            <button class = "scissors-button"> Scissors </button>
         </div>
         
         <script>
