--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Style buttons. Add button event listener.     -->
+<!-- commit: Add gifbutton-box, re-organize divs for rps gifs.     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -16,15 +16,19 @@
                 Play your best against the computer!
             </div>
         </header>
-        <div class = "button-box">
-            <img class = "rock-gif" src = "img/rock.gif">
-            <img class = "paper-gif" src = "img/paper.gif">
-            <img class = "scissors-gif" src = "img/scissors.gif">
-        </div>
-        <div class = "button-box">
-            <button class = "rock-button"> Rock </button>
-            <button class = "paper-button"> Paper </button>
-            <button class = "scissors-button"> Scissors </button>
+        <div class = "selection-box">
+            <div class = "gifbutton-box">
+                <img class = "rock-gif" src = "/img/rock.gif">
+                <button> Rock </button>
+            </div>
+            <div class = "gifbutton-box">
+                <img class = "paper-gif" src = "/img/paper.gif">
+                <button> Paper </button>
+            </div>
+            <div class = "gifbutton-box">
+                <img class = "scissors-gif" src = "/img/scissors.gif">
+                <button> Scissors </button>
+            </div>
         </div>
         
         <script>
