Style header. Style buttons.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Add gifbutton-box, re-organize divs for rps gifs.     -->
+<!-- commit: Style header. Style buttons.     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
