Remove pseudocode.html. Add pseudocode.js for reference.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Rock, paper, scissors game made by Rose Pineau. "rps-ui" branch from main. Initial branch commit 7/9/2022. See README.md for further info.-->
 
-<!-- commit: Add app.js. Move <script> into app.js.     -->
+<!-- commit: Remove pseudocode.html. Add pseudocode.js for reference.     -->
 <!DOCTYPE html>
 <html lang = 'en'>
     <head>
@@ -19,7 +19,7 @@
         <div class = "selection-box">
             <div class = "gifbutton-box">
                 <img class = "rock-gif" src = "/img/rock.gif">
-                <button> Rock </button>
+                <button id = "rock"> Rock </button>
             </div>
             <div class = "gifbutton-box">
                 <img class = "paper-gif" src = "/img/paper.gif">
